--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -173,6 +173,7 @@ body {
   /* margin-top: 11px; */
   border-radius: 5px;
   min-height: 32px;
+  padding: .25rem .7rem;
 }
 
 .j-form input, .j-form select, .j-form textarea {
