--- a/frontend/src/Components/NavigationBar.css
+++ b/frontend/src/Components/NavigationBar.css
@@ -4,7 +4,7 @@
   transform: translateX(-50%);
   z-index: 10;
   
-  width: 725px;
+  width: 90%;
 }
 
 .container-logo {
@@ -27,10 +27,15 @@ ul.j-navbar {
   border-bottom: solid 1px #ddd;
   /* padding-bottom: 3px; */
   margin-bottom: 3px;
+  justify-content: space-around;
+}
+
+.j-navbar > a, .j-navbar > li {
+  width: 20%;
 }
 
 .j-navbar li {
-    min-width: 145px;
+    /* min-width: 145px; */
     min-height: 28px;
     /* border: solid 1px #000; */
     padding: 6px 3px;
@@ -76,6 +81,7 @@ ul.j-navbar {
 .j-navbar li#active-slide {
   position: absolute;
   top: 1px;
+  left: 0;
   z-index: 10;
   transition-property: opacity, transform;
   transition-duration: 1s,  0.22s;
