--- a/frontend/src/Components/NavigationBar.css
+++ b/frontend/src/Components/NavigationBar.css
@@ -83,6 +83,7 @@ ul.j-navbar {
   top: 1px;
   left: 0;
   z-index: 10;
+  height: 100%;
   transition-property: opacity, transform;
   transition-duration: 1s,  0.22s;
   background: rgb(255,255,255);
